Bug 373323 - Unsupported Action: Authorization failed
Summary: Unsupported Action: Authorization failed
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (show other bugs)
Version: 5.29.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-05 23:39 UTC by Andreas Schwab
Modified: 2017-04-17 10:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schwab 2016-12-05 23:39:34 UTC
When trying to visit https://intra.microfocus.net/, the following error is displayed:

The requested operation could not be completed

Unsupported Action: Authorization failed.

Details of the Request:

URL: https://intra.microfocus.net/
Protocol: https
Date and Time: Tuesday, December 06, 2016 12:28 AM
Additional Information: Authorization failed.
Description:

The requested action is not supported by the KDE program which is implementing the <strong>https</strong> protocol.

Possible Causes:

This error is very much dependent on the KDE program. The additional information should give you more information than is available to the KDE input/output architecture.
Possible Solutions:

Attempt to find another way to accomplish the same outcome.
Comment 1 Andreas Schwab 2016-12-22 14:07:10 UTC
This is really a kio bug.  Workaround:

Index: kio-5.29.0/src/ioslaves/http/http.cpp
===================================================================
--- kio-5.29.0.orig/src/ioslaves/http/http.cpp
+++ kio-5.29.0/src/ioslaves/http/http.cpp
@@ -5525,7 +5525,7 @@ bool HTTPProtocol::handleAuthenticationH
                     if (!authTokens.isEmpty()) {
                         goto try_next_auth_scheme;
                     } else {
-                        error(ERR_UNSUPPORTED_ACTION, i18n("Authorization failed."));
+                        //error(ERR_UNSUPPORTED_ACTION, i18n("Authorization failed."));
                         authRequiresAnotherRoundtrip = false;
                     }
                     //### return false; ?
Comment 2 Albert Astals Cid 2017-04-17 10:50:43 UTC
Git commit 1740dae897ad8f78192093788f25290ef74e205a by Albert Astals Cid, on behalf of Andreas Schwab.
Committed on 17/04/2017 at 10:49.
Pushed by aacid into branch 'master'.

http slave: send error page after authorization failure

Differential Revision: https://phabricator.kde.org/D5368

M  +3    -1    src/ioslaves/http/http.cpp

https://commits.kde.org/kio/1740dae897ad8f78192093788f25290ef74e205a
Comment 3 Albert Astals Cid 2017-04-17 10:53:39 UTC
Git commit b6f20222cc1192d9329e170211049ad6c867cfe2 by Albert Astals Cid, on behalf of Andreas Schwab.
Committed on 17/04/2017 at 10:52.
Pushed by aacid into branch 'KDE/4.14'.

http slave: send error page after authorization failure

Backport from KF5 kio

M  +3    -1    kioslave/http/http.cpp

https://commits.kde.org/kdelibs/b6f20222cc1192d9329e170211049ad6c867cfe2