http slave: send error page after authorization failure

BUG: 373323

Differential Revision: https://phabricator.kde.org/D5368